Undo and documentation for section headings.

--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -661,4 +661,7 @@ Do you want to replace the project contained in this file?</value>
   <data name="import_phrase_error_text" xml:space="preserve">
     <value>The audio file "{0}" could not be imported as its audio settings (channels, bit depth, sample rate) do not match those of the project.</value>
   </data>
+  <data name="mark_section_heading_command_label" xml:space="preserve">
+    <value>mark audio block as section heading</value>
+  </data>
 </root>
