--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -667,4 +667,16 @@ Do you want to replace the project contained in this file?</value>
   <data name="unmark_section_heading_command_label" xml:space="preserve">
     <value>unmark audio block as section heading</value>
   </data>
+  <data name="cleaned_project_caption" xml:space="preserve">
+    <value>Project cleaned up</value>
+  </data>
+  <data name="cleaned_project_text" xml:space="preserve">
+    <value>The project has been cleaned up successfully.</value>
+  </data>
+  <data name="didnt_clean_project_caption" xml:space="preserve">
+    <value>Error cleaning up project</value>
+  </data>
+  <data name="didnt_clean_project_text" xml:space="preserve">
+    <value>Could not clean up project. Reason given: {0}</value>
+  </data>
 </root>
