--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -691,4 +691,7 @@ Do you want to replace the project contained in this file?</value>
   <data name="missing_description" xml:space="preserve">
     <value>The description for this metadata item is missing.</value>
   </data>
+  <data name="help_file_name" xml:space="preserve">
+    <value>help_en.html</value>
+  </data>
 </root>
