--- a/prototype/Zaboom/Zaboom/ZaboomForm.resx
+++ b/prototype/Zaboom/Zaboom/ZaboomForm.resx
@@ -239,4 +239,7 @@
         YII=
 </value>
   </data>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
 </root>
