--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -700,4 +700,10 @@ Do you want to replace the project contained in this file?</value>
   <data name="cannot_delete_metadata_text" xml:space="preserve">
     <value>Cannot delete metadata item "{0}": it is required for the publication to be valid.</value>
   </data>
+  <data name="error_metadata_name_caption" xml:space="preserve">
+    <value>Cannot create metadata item</value>
+  </data>
+  <data name="error_metadata_name_message" xml:space="preserve">
+    <value>Cannot create metadata item with the name "{0}": name must not start with "dtb:"</value>
+  </data>
 </root>
