--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -723,4 +723,12 @@ Do you want to replace the project contained in this file?</value>
     <value>help_en.html</value>
     <comment>Name of the help file for the current language</comment>
   </data>
+  <data name="add_new_section_command" xml:space="preserve">
+    <value>add section</value>
+    <comment>Short description for Command.TOC.AddNewSection</comment>
+  </data>
+  <data name="last_command" xml:space="preserve">
+    <value>last command</value>
+    <comment>Generic command short description</comment>
+  </data>
 </root>
