--- a/docs/TODO
+++ b/docs/TODO
@@ -10,6 +10,12 @@
 # "Done" can be: NO (default), NOTYET, YES, LATER
 # "And" can be ommitted, but should contain notes, etc.
 
+What? Switch back to current toolkit.
+When? September
+Who? Julien
+Done? NOTYET
+And? We are now using the tagged version and are waiting for Ole's OK to move back to the trunk version of the toolkit.
+
 What? Audio backend cleanup.
 When? September
 Who? Avneesh
@@ -22,9 +28,27 @@ Who? Avneesh
 And? Julien should review the playback document to make sure that it's in sync with the forthcoming changes.
 
 What? Mockup manual.
-When? September 13th
+When? September
 Who? Julien
 And? Have a mockup of the user manual (at least a skeleton) so that features to be implemented are documented. This is used for reference and testing.
+Done? NOTYET
+
+What? New project panel design and implementation.
+When? September
+Who? Julien
+And? Add a metadata view instead of the dialog, and use the transport bar instead of the record dialog. Make everything undoable. This breaks the old Obi so a tag is introduced (Obi-0.9) Make the TOC view scalable as well.
+Done? NOTYET
+
+What? Scalable editable labels.
+When? September
+Who? Julien
+And? Editable labels that automatically scale to accomodate larger font sizes. Tese labels are used in most other controls so that they can scale along with the label.
+Done? NO
+
+What? New strips.
+When? September
+Who? Julien
+And? No margin between strips, use the entire width of the strips view. Make the strips scalable.
 Done? NOTYET
 
 What? New block design.
@@ -44,55 +68,40 @@ When? September
 Who? Julien
 And? Audio blocks display the waveform of their content. 
 
-What? Update import structure.
-When? After blocks are implemented.
-Who? Marisa
-Done? NOTYET
-And? Allow marking up blocks in the HTML document following new blocks structure, at least page numbers. Julien to look into the test files and update the description for import in the mockup manual. Actually, you could import structure + pages from HTML in Obi .9, but it will need to be cleaned up for the new blocks.
-
-What? Update Z export.
-When? After blocks are implemented.
-Who? Julien, Marisa
-And? Update the XSLT to export the new kinds of blocks. This should be part of implementing each new block functionality.
-
 What? Mark custom blocks on the fly.
-When? After blocks are implemented.
+When? October
 Who? Avneesh
 And? Main block classes (phrases, pages, sections) have their button and shortcut, but all other classes can be added through an extra custom button.
+
+What? Import structure
+When? October
+Who? Marisa
+Done? NOTYET
+And? The HTML file can contain page blocks and heading blocks. When the project is created within Obi, empty blocks are created as well.
+
+What? Record into empty blocks
+When? October
+Who? Julien
+And? When an empty block is selected for recording, record in that block instead of creating a new one. When the user presses "next phrase/page/etc.", record in the next block if it is empty and matches the block kind, or create a new block of that kind.
+
+What? Import audio into empty blocks
+When? October
+Who? Julien
+And? When an empty block is selected, do not create a new block to import audio in. If importing several files, create new blocks for the other files.
 
 What? Skippable items.
 When? November
 Who? Julien
 
-What? Escapabel items.
+What? Escapable items.
 When? November
 Who? Julien
-
-What? New strip design.
-When? September
-Who? Julien
-And? No margin between strips, use the entire width of the strips view.
-
-What? New project panel design.
-When? September
-Who? Julien
-And? Add a metadata view instead of the dialog, and use the transport bar instead of the record dialog. Make everything undoable.
-
-What? Review of the command manager.
-When? 22 September
-Who? Julien, Marisa
-And? We have a meeting planned in Amsterdam to handle this issue. We need to get definite info from the architecture team by then.
-
-What? Review cleanup.
-When? September
-Who? Marisa, Avneesh
-Done? NOTYET
-And? Check with the implementation about the status of cleanup in the new asset manager. We need two kinds of cleanup: (1) cleanup unreferenced assets (this is handled by the asset manager), and (2) get rid of unused book elements (which in turn performs the asset manager cleanup.) An update from Ole (12 Sept): "There is currently a cleanup method on Presentation, that removes any unused managed audio data. A side-effect is that a single data provider (and therefore wav file ) is created for each WavAudioMedia/ManagedAudioMedia." 
 
 What? Organize coding workshop.
 When? September
 Who? Julien, Dipendra
-And? Should take place late November/early December; Julien to inquire about organizing it in Japan and Dipendra about India.
+Done? NOTYET
+And? Julien proposed last week of November.
 
 What? Waveform editing.
 When? October
@@ -107,7 +116,7 @@ And? Manual numbering, renumbering on demand, support for front, main and specia
 What? Search text.
 When? October
 Who? Marisa
-And? Search text in section titles, annotations, metadata, custom classes, page numbers.
+And? Search text in section titles, annotations, metadata, custom classes, page numbers. Use a VI model with / which brings up a popup dialog, and selects the current search result in the view that has focus (e.g. text found in a section title selects the TOC node in the TOC view, or the strip otherwise.)
 
 What? Split and merge sections.
 When? October
@@ -134,6 +143,7 @@ Who? Julien and Avneesh
 What? Multiple selection.
 When? November
 Who? Julien and Marisa
+And? At first, just do batch operations; disable operations which are not trivial in the case of multiple selections. Use the command manager to show a single operation.
 
 What? Phrase detection.
 When? November
@@ -142,6 +152,21 @@ Who? Avneesh and Julien
 What? User preferences and profile.
 When? November
 Who? Julien
+
+What? Project cleanup
+When? November
+Who? Marisa
+And? Unreferenced audio data is deleted from the asset manager (this part is handled by the toolkit), then unused nodes and their audio data are deleted from the tree. This clears the undo stack as well and modifies the project.
+
+What? Publish
+When? November
+Who? Marisa
+And? A complete copy of the tree along with all of its audio data is made. Cleanup (toolkit) and pruning (Obi) of the copy is performed. The audio assets are consolidated (one audio file per section; file names in the same order as the sections for sequential playback; toolkit). The copy of the tree is serialized to XUK in memory and the XUK-2-Z transformation is applied to the copy (Obi). As a result, the publish directory contains all the DAISY 3 files and the one audio file per section audio data; the original project and its data are left untouched. Questions: (1) does copying the entire tree work? (2) will cleanup really only affect our copy? (3) when will asset consolidation (one asset per section) work?
+
+What? XUK to Z update
+When? November
+Who? Julien, Marisa
+And? Update the XSLT and transformation code for the XUK to Z export so that all new blocks are correctly handled (pages, skippable/escapable items, headings, NCX images, etc.)
 
 What? Pre-release testing.
 When? December
