--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -741,4 +741,7 @@ Do you want to replace the project contained in this file?</value>
     <value>rename section</value>
     <comment>RenameSection command label</comment>
   </data>
+  <data name="dummy_section" xml:space="preserve">
+    <value>(dummy section)</value>
+  </data>
 </root>
