--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -762,4 +762,7 @@ Do you want to replace the project contained in this file?</value>
   <data name="paste_section_command" xml:space="preserve">
     <value>paste section</value>
   </data>
+  <data name="toggle_section_used_command" xml:space="preserve">
+    <value>mark section node as {0}</value>
+  </data>
 </root>
